# ries-rs

./: .gitignore  .repo  .repomixignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PARITY_REMAINING_REPORT.md  README.md  RELEASING.md  package.json  playwright.config.ts  pyproject.toml  test_direct_expr.mjs  test_wasm_minimal.mjs  test_wasm_simple.mjs  wasm_debug_test.mjs
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: parity-reviewer.md
.claude/skills/bench/: SKILL.md
.claude/skills/parity-check/: SKILL.md
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md  release-template.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  release.yml
benches/: evaluation.rs  generation.rs  search.rs
docs/: ARCHITECTURE.md  COMPLEXITY.md  PARITY_STATUS.md  PERFORMANCE.md  PYTHON_BINDINGS.md  README.md  SEARCH_MODEL.md  WASM_BINDINGS.md  cleanup-remediation-plan.md
docs/archive/artifacts/manifests/: run-2026-02-20-sample.json
docs/archive/parity/: 2026-02-18-parity-remaining-report.md
docs/archive/plans/: 2026-02-16-code-quality-improvements.md  2026-02-17-full-parity-design.md  2026-02-17-full-parity-implementation.md  2026-02-17-p0-parity-fixes.md  2026-02-19-review-recommendations.md  2026-02-24-web-interface-design.md  2026-02-24-web-interface-implementation.md  2026-03-19-review-remediation-plan.md
docs/benchmarks/: 2026-02-25-generation-parallel-scaling.md  2026-02-25-level3-baseline.md  2026-03-20-level3-baseline.md  README.md
docs/benchmarks/artifacts/: 2026-02-25-environment.txt  2026-02-25-generation-parallel-criterion.txt  2026-02-25-level3-parallel.json  2026-02-25-level3-seq-deterministic.json  2026-03-20-level3-baseline-environment.txt  2026-03-20-level3-baseline-parallel.json  2026-03-20-level3-baseline-seq-deterministic.json
docs/plans/: 2026-02-16-code-quality-improvements-design.md  2026-02-16-code-quality-improvements.md  2026-02-17-full-parity-design.md  2026-02-17-full-parity-implementation.md  2026-02-17-p0-parity-fixes.md  2026-02-19-review-recommendations.md  2026-02-24-web-text-output-mode-plan.md  2026-02-24-web-text-output-mode.md  2026-02-27-fix-review-issues.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v2.0.0.md  v2.0.1.md  v2.0.2.md
docs/superpowers/plans/: 2026-03-17-dotrepo-full-compliance.md
docs/superpowers/specs/: 2026-03-17-dotrepo-full-compliance-design.md
examples/: basic_search.rs  custom_config.rs  streaming.rs
reviews/: c.md  cl.md  g.md  ge.md
ries-original/: ries  ries.c
ries-py/: Cargo.toml  PYPI.md  pyproject.toml
ries-py/src/: lib.rs
ries-py/tests/: test_smoke.py
schema/: run-manifest-v1.json
scripts/: build_web_site.sh  capture_search_benchmark.py  check_release_integrity.py  profile_comparison.sh  test_ries_py_python.sh  test_ries_py_rust.sh
src/: eval.rs  expr.rs  fast_match.rs  gen.rs  highprec_verify.rs  lib.rs  main.rs  manifest.rs  match_summary.rs  metrics.rs  pool.rs  precision.rs  presets.rs  profile.rs  pslq.rs  python.rs  report.rs  search.rs  search.rs.bak3  solver.rs  stability.rs  symbol.rs  symbol_table.rs  thresholds.rs  udf.rs  wasm.rs
src/cli/: args.rs  config_builder.rs  diagnostics.rs  json_types.rs  legacy.rs  manifest.rs  mod.rs  output.rs  post_process.rs  runtime.rs  search_runner.rs
src/search/: db.rs  newton.rs  tests.rs
tests/: README.md  cli_regression_tests.rs  compare_with_original.sh  evaluation_tests.rs  expensive_debug_tests.rs  expression_tests.rs  integration_tests.rs  profile_tests.rs  property_tests.proptest-regressions  property_tests.rs  search_tests.rs  test_expr_wasm.rs  wasm_tests.rs  web-smoke.spec.ts
tests/cli/: basics.rs  diagnostics.rs  legacy.rs  ranking.rs
tests/common/: fixtures.rs  mod.rs
tools/: replay_manifest.py
web/: README.md  index.html  index.html.old  main.js.old  search-worker.js  styles.css.old
