[package]
name = "ries"
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Santoro"]
description = "Find algebraic equations given their solution - Rust implementation"
license = "MIT"
repository = "https://github.com/maxwellsantoro/ries-rs.git"
documentation = "https://docs.rs/ries"
readme = "README.md"
keywords = ["math", "equation", "solver", "algebraic", "ries"]
categories = ["mathematics", "science"]

[lib]
name = "ries_rs"
path = "src/lib.rs"
# Required for Python bindings
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ries-rs"
path = "src/main.rs"

[features]
default = ["parallel"]
parallel = ["rayon"]
highprec = ["rug"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Directories (for profile loading)
dirs = "5.0"

# Parallelization
rayon = { version = "1.10", optional = true }

# Arbitrary precision (optional)
rug = { version = "1.24", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Utilities
ordered-float = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "generation"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

# Create .cargo/config.toml for native CPU optimization
