[package]
name = "ries-py"
version = "1.1.1"
edition = "2021"
authors = ["Maxwell Santoro"]
description = "Find algebraic equations given their solution - Python bindings"
license = "MIT"
homepage = "https://maxwellsantoro.com/projects/ries-rs"
repository = "https://github.com/maxwellsantoro/ries-rs.git"
documentation = "https://github.com/maxwellsantoro/ries-rs/blob/main/docs/PYTHON_BINDINGS.md"
readme = "PYPI.md"
publish = false

[lib]
name = "ries_rs"
crate-type = ["cdylib"]

[features]
# extension-module tells PyO3 to resolve Python symbols at runtime (required for
# the .so build).  It is included in the default feature set so that `maturin
# develop` / `maturin build` work without extra flags.
#
# `cargo test` for this crate requires a Python interpreter to be installed at
# link time.  Without one, use the root crate test suite instead — it covers the
# same Rust search logic without the PyO3 binding layer.
#
# For a supported Rust-side test workflow, use `./scripts/test_ries_py_rust.sh`.
# That disables `extension-module`, selects `python3`, and enables
# `PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1` when the local interpreter is newer
# than the PyO3 release bundled here officially supports.
#
# Full fix: extract pure-Rust helpers from the PyO3 wrappers into a separate
# internal module and test those; the binding code itself can only be tested
# through Python (pytest / maturin develop).
default = ["extension-module", "parallel"]
extension-module = ["pyo3/extension-module"]
parallel = ["ries_core/parallel"]
highprec = ["ries_core/highprec"]

[dependencies]
ries_core = { package = "ries", path = "..", version = "1.1.1" }
pyo3 = { version = "0.22" }
