[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ries-rs"
version = "1.0.1"
description = "Find algebraic equations given their solution"
readme = "PYPI.md"
license = {text = "MIT"}
authors = [
    {name = "Maxwell Santoro"}
]
keywords = ["math", "equation", "solver", "algebraic", "inverse-symbolic-calculator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/maxwellsantoro/ries-rs"
Documentation = "https://github.com/maxwellsantoro/ries-rs/blob/main/docs/PYTHON_BINDINGS.md"
Repository = "https://github.com/maxwellsantoro/ries-rs.git"

[tool.maturin]
strip = true
